--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="">
     <meta property="og:description" content="">
-    <meta property="og:image" content="https://images.yourstory.com/cs/wordpress/2016/11/leadership-lessons-from-travelling.jpg">
-    <meta property="og:url" content="http://">
-    <meta property="og:site_name" content="">
+    <!-- <meta property="og:image" content="https://images.yourstory.com/cs/wordpress/2016/11/leadership-lessons-from-travelling.jpg"> -->
+    <!-- <meta property="og:url" content="http://"> -->
+    <!-- <meta property="og:site_name" content=""> -->
     <title>Monticello</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/all.css">
     <link href="css/style.css" rel="stylesheet">
     <link rel="short icon" href="img/favicon.ico">
 </head>
 
 <body>
-    
-    
+    <!-- section.header>.container>.header__menu -->
 </body>
 
 </html>
