--- a/index.html
+++ b/index.html
@@ -14,13 +14,166 @@
     <!-- <meta property="og:site_name" content=""> -->
     <title>Monticello</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/all.css">
+    <link rel="stylesheet" href="css/reset.css">
     <link href="css/style.css" rel="stylesheet">
     <link rel="short icon" href="img/favicon.ico">
 </head>
 
 <body>
-    <!-- section.header>.container>.header__menu -->
+    <header class="header">
+        <div class="container">
+            <div class="header__wrapper">
+                <div class="header__logo">
+                    <img src="img/logo.svg" width="243" alt="logo">
+                </div>
+                <ul class="header__menu">
+                    <li class="header__item"><a href="#aboutUs">about us</a></li>
+                    <li class="header__item"><a href="#projects">projects</a></li>
+                    <li class="header__item"><a href="#aboutUs">news</a></li>
+                    <li class="header__item"><a href="#aboutUs">contact</a></li>
+                </ul>
+                <div class="header__social">
+                    <div class="icon__facebook">
+                        <img src="img/icon-facebook.png" width="41" alt="facebook">
+                    </div>
+                    <div class="icon__twitter">
+                        <img src="img/icon-twitter.png" width="41" alt="twitter">
+                    </div>
+                    <div class="icon__instagram">
+                        <img src="img/icon-insta.png" width="41" alt="instagram">
+                    </div>
+                </div>
+            </div>
+            <div class="header__slider"></div>
+        </div>
+
+    </header>
+    <section id="projects" class="ourGoal">
+        <div class="container">
+            <h3 class="ourGoal__title">what we do</h3>
+            <div class="ourGoal__card">
+                <div class="ourGoal-bg"></div>
+                <img class="card__image" src="img/trade-center.jpg" width="630" alt="trade-center">
+                <div class="ourGoal__desc">
+                    <h5 class="card__pretitle">one world</h5>
+                    <h4 class="card__title">trade center</h4>
+                    <p class="card__definition">Increasing prosperity in our lives can be accomplished by having the right frame of mind. The truth is, our thoughts are very powerful.</p>
+                    <button class="btn-details">more details</button>
+                    <p class="address"><i class="fas fa-map-marker-alt"></i> New York City, United States - 1776 feet</p>
+                </div>
+            </div>
+            <div class="ourGoal__card">
+                <div class="ourGoal__desc">
+                    <h5 class="card__pretitle">international</h5>
+                    <h4 class="card__title">commerce center</h4>
+                    <p class="card__definition">Successful businesses have many things in common, today we’ll look at the big ‘R’ of recognition and how a digital advertising network may help.
+                    </p>
+                    <button class="btn-details">more details</button>
+                    <p class="address"><i class="fas fa-map-marker-alt"></i> Hong Kong - 1588 Feet</p>
+                </div>
+                <div class="ourGoal-bg--secondary"></div>
+                <img class="card__image" src="img/commerce-center.jpg" width="630" alt="commerce-center">
+            </div>
+        </div>
+    </section>
+    <section class="news">
+        <div class="container">
+            <h3 class="news__title">latest news</h3>
+            <img src="img/right-tick.png" alt="right-click">
+            <img src="img/right-tick.png" alt="right-click">
+            <div class="slider">
+                <div class="board">
+                    <img src="img/lauren-mancke-60633.jpg" alt="lauren-mancke">
+                    <h4 class="board__title">See The Unmatched Beauty Of The Great.</h4>
+                    <p class="board__desc">Free directories: directories are perfect for customers that are... searching for</p>
+                    <div class="board__inner">
+                        <img style="border-radius: 30px;" src="img/isaac-dunn.png" width="60px" alt="isaac-dunn">
+                        <div class="board__inner-wrapper">
+                            <h5 class="name">isaac dunn</h5>
+                            <p class="date">09 Feb 2017</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="board">
+                    <img src="img/lauren-mancke-60633.jpg" alt="lauren-mancke">
+                    <h4 class="board__title">See The Unmatched Beauty Of The Great.</h4>
+                    <p class="board__desc">Free directories: directories are perfect for customers that are... searching for</p>
+                    <div class="board__inner">
+                        <img style="border-radius: 30px;" src="img/isaac-dunn.png" width="60px" alt="isaac-dunn">
+                        <div class="board__inner-wrapper">
+                            <h5 class="name">isaac dunn</h5>
+                            <p class="date">09 Feb 2017</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="board">
+                    <img src="img/lauren-mancke-60633.jpg" alt="lauren-mancke">
+                    <h4 class="board__title">See The Unmatched Beauty Of The Great.</h4>
+                    <p class="board__desc">Free directories: directories are perfect for customers that are... searching for</p>
+                    <div class="board__inner">
+                        <img style="border-radius: 30px;" src="img/isaac-dunn.png" width="60px" alt="isaac-dunn">
+                        <div class="board__inner-wrapper">
+                            <h5 class="name">isaac dunn</h5>
+                            <p class="date">09 Feb 2017</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="gallery">
+        <h3 class="gallery__title">gallery</h3>
+        <div class="container">
+            <div class="gallery__wrapper">
+                <div class="gallery__panorama">
+                    <img src="img/scott-webb-176434.jpg" alt="buidling2">
+                </div>
+                <div class="gallery__mosaic">
+                    <div class="gallery__mosaic-inner">
+                        <img src="img/photos-13323p6Bdc0uhr8Bq.jpg" alt="buidling1">
+                        <img src="img/fuse-brussels-169216.jpg" alt="buidling3">
+                    </div>
+                    <div class="gallery__mosaic-inner">
+                        <img src="img/echo-grid-156713.jpg" alt="buidling2">
+                        <img src="img/tu-tram-pham-202263.jpg" alt="buidling4">
+                    </div>
+                </div>
+            </div>
+            <button class="btn-details">see more</button>
+        </div>
+    </section>
+    <section id="map">
+    </section>
+    <footer class="footer">
+        <div class="header__logo">
+            <img src="img/logo.svg" width="243" alt="logo">
+        </div>
+        <div class="header__social">
+            <div class="icon__facebook">
+                <img src="/img/icon-facebook.png" width="41" alt="facebook">
+            </div>
+            <div class="icon__twitter">
+                <img src="/img/icon-twitter.png" width="41" alt="twitter">
+            </div>
+            <div class="icon__instagram">
+                <img src="/img/icon-insta.png" width="41" alt="instagram">
+            </div>
+        </div>
+
+    </footer>
+
+    <span>Copyrights &#169; 2017 Monticello  |  Made with <i class="fas fa-heart white-heart"></i> Ga Huy</span>
+    
+    <script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYWXltXjSqezBaK0AZAKfBpcoFvYLD7c4&callback=initMap&libraries=&v=weekly"
+    async
+  ></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.js"integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+    <script src="js/slick.min.js"></script>
+    <script src="js/script.js"></script>
+    <script src="js/googlemap.js"></script>
 </body>
 
 </html>
