--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
                     </div>
                 </div>
             </div>
-            <div class="header__slider"></div>
+            <div class="header__slider">
+                <div class="slide-item"></div>
+            </div>
         </div>
 
     </header>
@@ -100,25 +102,49 @@
                 </div>
                 <div class="board">
                     <img src="img/matthew-hamilton-202227.jpg" alt="matthew-hamilton">
-                    <h4 class="board__title">See The Unmatched Beauty Of The Great.</h4>
-                    <p class="board__desc">Free directories: directories are perfect for customers that are... searching for</p>
+                    <h4 class="board__title">Effective Advertising Pointers.</h4>
+                    <p class="board__desc">Having a home based business is a wonderful asset to your life.</p>
                     <div class="board__inner">
-                        <img style="border-radius: 30px;" src="img/isaac-dunn.png" width="60px" alt="isaac-dunn">
+                        <img style="border-radius: 30px;" src="img/dominic-freeman.png" width="60px" alt="isaac-dunn">
                         <div class="board__inner-wrapper">
-                            <h5 class="name">isaac dunn</h5>
-                            <p class="date">09 Feb 2017</p>
+                            <h5 class="name">dominic freeman</h5>
+                            <p class="date">24 Apr 2017</p>
                         </div>
                     </div>
                 </div>
                 <div class="board">
                     <img src="img/hypnotize.jpg" alt="matthew-hamilton">
-                    <h4 class="board__title">See The Unmatched Beauty Of The Great.</h4>
-                    <p class="board__desc">Free directories: directories are perfect for customers that are... searching for</p>
+                    <h4 class="board__title">Hypnotize Yourself<br> Into The Ghost.</h4>
+                    <p class="board__desc">There are many things that<br> are important to catalog design...</p>
                     <div class="board__inner">
-                        <img style="border-radius: 30px;" src="img/isaac-dunn.png" width="60px" alt="isaac-dunn">
+                        <img style="border-radius: 30px;" src="img/alice-ward.png" width="60px" alt="isaac-dunn">
                         <div class="board__inner-wrapper">
-                            <h5 class="name">isaac dunn</h5>
-                            <p class="date">09 Feb 2017</p>
+                            <h5 class="name">alice ward</h5>
+                            <p class="date">30 Dec 2017</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="board">
+                    <img src="img/hypnotize.jpg" alt="matthew-hamilton">
+                    <h4 class="board__title">Hypnotize Yourself<br> Into The Ghost.</h4>
+                    <p class="board__desc">There are many things that<br> are important to catalog design...</p>
+                    <div class="board__inner">
+                        <img style="border-radius: 30px;" src="img/alice-ward.png" width="60px" alt="isaac-dunn">
+                        <div class="board__inner-wrapper">
+                            <h5 class="name">alice ward</h5>
+                            <p class="date">30 Dec 2017</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="board">
+                    <img src="img/hypnotize.jpg" alt="matthew-hamilton">
+                    <h4 class="board__title">Hypnotize Yourself<br> Into The Ghost.</h4>
+                    <p class="board__desc">There are many things that<br> are important to catalog design...</p>
+                    <div class="board__inner">
+                        <img style="border-radius: 30px;" src="img/alice-ward.png" width="60px" alt="isaac-dunn">
+                        <div class="board__inner-wrapper">
+                            <h5 class="name">alice ward</h5>
+                            <p class="date">30 Dec 2017</p>
                         </div>
                     </div>
                 </div>
