--- a/index.html
+++ b/index.html
@@ -23,16 +23,24 @@
 
 <body>
     <header class="header">
+        <div class="header__slider">
+            <div class="slider__item--first"></div>
+            <div class="slider__item--second"></div>
+            <div class="slider__item--third"></div>
+            <div class="slider__item--first"></div>
+            <div class="slider__item--second"></div>
+        </div>
+        <div class="header__dots"></div>
         <div class="container">
             <div class="header__wrapper">
                 <div class="header__logo">
                     <img src="img/logo.svg" width="243" alt="logo">
                 </div>
                 <ul class="header__menu">
-                    <li class="header__item"><a href="#aboutUs">about us</a></li>
+                    <li class="header__item"><a href="#aboutus">about us</a></li>
                     <li class="header__item"><a href="#projects">projects</a></li>
                     <li class="header__item"><a href="#news">news</a></li>
-                    <li class="header__item"><a href="#form">contact</a></li>
+                    <li class="header__item"><a href="#contact">contact</a></li>
                 </ul>
                 <div class="header__social">
                     <div class="icon__facebook">
@@ -46,10 +54,10 @@
                     </div>
                 </div>
             </div>
-            <div class="header__slider">
-                <div class="slide-item"></div>
-            </div>
         </div>
+        <h1 class="header__title">Simple & mordern</h1>
+        <p class="header__pretitle">We make the world's beautiful every day</p>
+        <img class="scroll-icon" src="img/scroll-icon.png" alt="scroll-icon">
 
     </header>
     <section id="projects" class="ourGoal">
@@ -87,13 +95,14 @@
         <div class="container">
             <h3 class="news__title">latest news</h3>
             <img src="img/left-tick.png" class="left-tick" alt="left-tick">
-            <div class="slider">
+            <div class="slider autoplay">
                 <div class="board">
                     <img src="img/lauren-mancke-60633.jpg" alt="lauren-mancke">
                     <h4 class="board__title">See The Unmatched Beauty Of The Great.</h4>
-                    <p class="board__desc">Free directories: directories are perfect for customers that are... searching for</p>
+                    <p class="board__desc">Free directories: directories are perfect for customers that are... searching
+                        for</p>
                     <div class="board__inner">
-                        <img style="border-radius: 30px;" src="img/isaac-dunn.png" width="60px" alt="isaac-dunn">
+                        <img style="border-radius: 30px;" src="img/isaac-dunn.png" width="60" alt="isaac-dunn">
                         <div class="board__inner-wrapper">
                             <h5 class="name">isaac dunn</h5>
                             <p class="date">09 Feb 2017</p>
@@ -105,7 +114,7 @@
                     <h4 class="board__title">Effective Advertising Pointers.</h4>
                     <p class="board__desc">Having a home based business is a wonderful asset to your life.</p>
                     <div class="board__inner">
-                        <img style="border-radius: 30px;" src="img/dominic-freeman.png" width="60px" alt="isaac-dunn">
+                        <img style="border-radius: 30px;" src="img/dominic-freeman.png" width="60" alt="isaac-dunn">
                         <div class="board__inner-wrapper">
                             <h5 class="name">dominic freeman</h5>
                             <p class="date">24 Apr 2017</p>
@@ -117,7 +126,7 @@
                     <h4 class="board__title">Hypnotize Yourself<br> Into The Ghost.</h4>
                     <p class="board__desc">There are many things that<br> are important to catalog design...</p>
                     <div class="board__inner">
-                        <img style="border-radius: 30px;" src="img/alice-ward.png" width="60px" alt="isaac-dunn">
+                        <img style="border-radius: 30px;" src="img/alice-ward.png" width="60" alt="isaac-dunn">
                         <div class="board__inner-wrapper">
                             <h5 class="name">alice ward</h5>
                             <p class="date">30 Dec 2017</p>
@@ -129,7 +138,7 @@
                     <h4 class="board__title">Hypnotize Yourself<br> Into The Ghost.</h4>
                     <p class="board__desc">There are many things that<br> are important to catalog design...</p>
                     <div class="board__inner">
-                        <img style="border-radius: 30px;" src="img/alice-ward.png" width="60px" alt="isaac-dunn">
+                        <img style="border-radius: 30px;" src="img/alice-ward.png" width="60" alt="isaac-dunn">
                         <div class="board__inner-wrapper">
                             <h5 class="name">alice ward</h5>
                             <p class="date">30 Dec 2017</p>
@@ -141,7 +150,7 @@
                     <h4 class="board__title">Hypnotize Yourself<br> Into The Ghost.</h4>
                     <p class="board__desc">There are many things that<br> are important to catalog design...</p>
                     <div class="board__inner">
-                        <img style="border-radius: 30px;" src="img/alice-ward.png" width="60px" alt="isaac-dunn">
+                        <img style="border-radius: 30px;" src="img/alice-ward.png" width="60" alt="isaac-dunn">
                         <div class="board__inner-wrapper">
                             <h5 class="name">alice ward</h5>
                             <p class="date">30 Dec 2017</p>
@@ -152,7 +161,7 @@
             <img src="img/right-tick.png" class="right-tick" alt="right-tick">
         </div>
     </section>
-    <section class="gallery">
+    <section id="aboutus" class="gallery">
         <h3 class="gallery__title">gallery</h3>
         <div class="container">
             <div class="gallery__wrapper">
@@ -170,7 +179,7 @@
                     </div>
                 </div>
             </div>
-            <button class="btn-details">see more</button>
+            <button class="btn-details btn-gallery">see more</button>
         </div>
     </section>
     <section id="map">
@@ -189,6 +198,7 @@
                 <input type="email" placeholder="Email" required>
                 <button class="btn-details btn-form" type="submit">submit</button>
             </form>
+        </div>
     </section>
     <footer class="footer">
         <div class="footer__inner">
@@ -222,6 +232,8 @@
     <script src="js/slick.min.js"></script>
     <script src="js/script.js"></script>
     <script src="js/googlemap.js"></script>
+    <script src="js/scroll.js"></script>
+
 </body>
 
 </html>
