--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="keywords" content="">
     <meta property='og:locale' content="en_EN">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="">
-    <meta property="og:description" content="">
+    <!-- <meta property="og:title" content="">
+    <meta property="og:description" content=""> -->
     <!-- <meta property="og:image" content="https://images.yourstory.com/cs/wordpress/2016/11/leadership-lessons-from-travelling.jpg"> -->
     <!-- <meta property="og:url" content="http://"> -->
     <!-- <meta property="og:site_name" content=""> -->
@@ -95,7 +95,7 @@
         <div class="container">
             <h3 class="news__title">latest news</h3>
             <img src="img/left-tick.png" class="left-tick" alt="left-tick">
-            <div class="slider autoplay">
+            <div class="my-slider autoplay">
                 <div class="board">
                     <img src="img/lauren-mancke-60633.jpg" alt="lauren-mancke">
                     <h4 class="board__title">See The Unmatched Beauty Of The Great.</h4>
@@ -207,13 +207,13 @@
             </div>
             <div class="header__social">
                 <div class="icon__facebook">
-                    <img src="/img/icon-facebook.png" width="41" alt="facebook">
+                    <img src="img/icon-facebook.png" width="41" alt="facebook">
                 </div>
                 <div class="icon__twitter">
-                    <img src="/img/icon-twitter.png" width="41" alt="twitter">
+                    <img src="img/icon-twitter.png" width="41" alt="twitter">
                 </div>
                 <div class="icon__instagram">
-                    <img src="/img/icon-insta.png" width="41" alt="instagram">
+                    <img src="img/icon-insta.png" width="41" alt="instagram">
                 </div>
             </div>
         </div>
